Add preview flag to java exec task for stress tests